--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Certification Training</title>
+  <title>Mover / Swamper Certification Test</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -65,9 +65,7 @@
   <div class="container">
     <h1>Certification Training</h1>
     <p>
-      Welcome! To earn your certification, please watch the full playlist below.  
-      These videos cover every concept you’ll be tested on.  
-      Make sure you understand each topic thoroughly before taking the test.
+      Welcome! Are you ready to get to work, safely?! To earn your mover / swamper certification with us, please watch the full playlist of safety & training videos below and complete the test with a score of 80% or higher. These videos cover every concept you’ll be tested on. Make sure you understand each topic thoroughly before taking the test! Good luck.
     </p>
 
     <div class="video-container">
