--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Certification Training</h1>
+    <h1>Mover / Swamper Certification Test</h1>
     <p>
       Welcome! Are you ready to get to work, safely?! To earn your mover / swamper certification with us, please watch the full playlist of safety & training videos below and complete the test with a score of 80% or higher. These videos cover every concept you’ll be tested on. Make sure you understand each topic thoroughly before taking the test! Good luck.
     </p>
