--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="video-container">
       <iframe
-        src="https://www.youtube.com/embed?list=PLAYLIST_ID"
+        src="https://www.youtube.com/embed?list=LaFoZR3gd44?si=1PPNU6rr8SqpQe4a"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
