--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
     </p>
 
     <div class="video-container">
-      <iframe
-        src="https://www.youtube.com/embed?list=LaFoZR3gd44?si=1PPNU6rr8SqpQe4a"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LaFoZR3gd44?si=1PPNU6rr8SqpQe4a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div style="text-align: center;">
