--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
     </p>
 
     <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/LaFoZR3gd44?si=1PPNU6rr8SqpQe4a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=4R88KoE1Sc6BxJnb&amp;list=PLG0DGUHeVSlY4zgtv--3KrABC71q5ib8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
     <div style="text-align: center;">
       <button id="testButton" class="btn">Take Certification Test</button>
     </div>
