--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mover / Swamper Certification Test</title>
-  <!-- Google Font -->
+  <!-- Google Font & Font-Awesome -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
@@ -18,21 +17,17 @@
       max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
-      position: relative; /* allow arrows overflow */
     }
     h1 {
-      text-align: center;
-      color: #004AAD;
-      margin-bottom: 10px;
+      text-align: center; color: #004AAD; margin-bottom: 10px;
     }
     p.intro {
-      line-height: 1.6;
-      margin-bottom: 30px;
-      text-align: center;
+      text-align: center; margin-bottom: 30px; line-height: 1.6;
     }
-    .slider {
+
+    /* ► NEW: video slider wrapper */
+    .video-slider {
       position: relative;
-      overflow: visible;
       margin-bottom: 40px;
     }
     .video-container {
@@ -49,6 +44,8 @@
       width: 100%; height: 100%;
       border: none;
     }
+
+    /* ► NEW: arrows */
     .arrow {
       position: absolute;
       top: 50%;
@@ -62,14 +59,13 @@
       justify-content: center;
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      z-index: 1;
+      z-index: 2;
     }
-    .arrow.left { left: -25px; }
-    .arrow.right { right: -25px; }
+    .arrow.left  { left: 20px; }
+    .arrow.right { right: 20px; }
+
     h2.section-title {
-      text-align: center;
-      color: #004AAD;
-      margin-bottom: 10px;
+      text-align: center; color: #004AAD; margin-bottom: 10px;
     }
     .notice {
       display: flex;
@@ -83,6 +79,7 @@
       border-radius: 4px;
     }
     .notice i { color: #004AAD; }
+
     .btn {
       display: inline-block;
       background: #004AAD;
@@ -95,6 +92,7 @@
       transition: background 0.25s ease;
     }
     .btn:hover { background: #00337A; }
+
     #formContainer {
       display: none;
       margin-top: 50px;
@@ -105,12 +103,12 @@
   <div class="container">
     <h1>Mover / Swamper Certification Test</h1>
     <p class="intro">
-      Welcome! To earn your certification, watch each full video playlist below (5 videos each), then click “Take Certification Test.”<br>
+      Welcome! To earn your certification, watch each full video playlist below (5 videos each), then click “Take Certification Test.”  
       You must score 80% or higher.
     </p>
 
-    <div class="slider">
-      <div class="arrow left" id="prevBtn"><i class="fa-solid fa-chevron-left"></i></div>
+    <div class="video-slider">
+      <div class="arrow left"  id="prevBtn"><i class="fa-solid fa-chevron-left"></i></div>
       <div class="arrow right" id="nextBtn"><i class="fa-solid fa-chevron-right"></i></div>
 
       <h2 class="section-title" id="sectionTitle">Section Title</h2>
@@ -132,7 +130,6 @@
     <div style="text-align: center;">
       <button id="testButton" class="btn">Take Certification Test</button>
     </div>
-
     <div id="formContainer">
       <div
         class="heyform"
@@ -143,23 +140,18 @@
     </div>
   </div>
 
-  <!-- HeyForm embed script -->
   <script src="https://my.heyform.net/embed"></script>
   <script>
-    // Define your sections here
     const playlists = [
-      { title: "Section 1: Safety Basics",          id: "PLG0DGUHeVSlY4zgtv--3KrABC71q5ib8M" },
+      { title: "Section 1: Safety Basics",            id: "PLG0DGUHeVSlY4zgtv--3KrABC71q5ib8M" },
       { title: "Section 2: Proper Lifting Techniques", id: "ANOTHER_PLAYLIST_ID_2" },
-      { title: "Section 3: Equipment & Tools",        id: "ANOTHER_PLAYLIST_ID_3" }
-      // …add more as needed
+      { title: "Section 3: Equipment & Tools",         id: "ANOTHER_PLAYLIST_ID_3" }
     ];
-
     let current = 0;
-    const titleEl   = document.getElementById('sectionTitle');
-    const frameEl   = document.getElementById('playlistFrame');
-    const prevBtn   = document.getElementById('prevBtn');
-    const nextBtn   = document.getElementById('nextBtn');
-
+    const titleEl = document.getElementById('sectionTitle');
+    const frameEl = document.getElementById('playlistFrame');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
     function updateSection() {
       const { title, id } = playlists[current];
       titleEl.textContent = title;
@@ -167,14 +159,11 @@
       prevBtn.style.visibility = current === 0 ? 'hidden' : 'visible';
       nextBtn.style.visibility = current === playlists.length - 1 ? 'hidden' : 'visible';
     }
-
-    prevBtn.addEventListener('click', () => { if (current>0) { current--; updateSection(); } });
-    nextBtn.addEventListener('click', () => { if (current<playlists.length-1) { current++; updateSection(); } });
-
+    prevBtn.addEventListener('click', () => { if (current>0) current--, updateSection(); });
+    nextBtn.addEventListener('click', () => { if (current<playlists.length-1) current++, updateSection(); });
     updateSection();
 
-    // show HeyForm on test button click
-    document.getElementById('testButton').addEventListener('click', function() {
+    document.getElementById('testButton').addEventListener('click', function(){
       document.getElementById('formContainer').style.display = 'block';
       document.getElementById('formContainer').scrollIntoView({ behavior: 'smooth' });
       this.style.display = 'none';
